--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programming Foundations CA</title>
+    <title>Morning Coffee</title>
     <link href='css/style.css' rel='stylesheet' />
-    <link rel='icon' href='data:;base64,=' />
+    <link rel='icon' href='coffee-logo.png'/>
     <script defer src="js/script.js"></script>
 </head>
 
