--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
             </figure>
             <div class="coffee-buttons">
                 <button class="button drink-button">Drink Coffee</button>
-                <button class="button fill-button">Fill Cup</button>
-                <button class="button add-milk">Add Milk</button>
+                <div class="buttons-under">
+                    <button class="button fill-button">Fill Cup</button>
+                    <button class="button add-milk">Add Milk</button>
+                </div>
+                
             </div>
         </div>
     </section>
