--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morning Coffee</title>
-    <link href='css/style.css' rel='stylesheet' />
-    <link rel='icon' href='coffee-logo.png'/>
-    <script defer src="js/script.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="Daniel Ekerhovd">
+        <title>Morning Coffee</title>
+        <link href='index.css' rel='stylesheet' />
+        <link rel='icon' href='/images/coffee-logo.png'/>
+        <script defer src="js/script.js"></script>
+    </head>
 
-<body>
-    <section>
-        <div class="content">
+    <body>
+        <section class="content">
             <h1>MORNING COFFEE</h1>
             <figure class="coffee-content">
+                <img class="coffee-cup" src="/images/edited-coffee-cup.png" alt="Coffee cup">
                 <div class="coffee"></div>
-                <img class="coffee-cup" src="/8134643_coffee_cup_icon.png" alt="Coffee cup">
-                
             </figure>
             <div class="coffee-buttons">
-                <button class="button drink-button">Drink Coffee</button>
+                <button class="drink-button">Drink Coffee</button>
                 <div class="buttons-under">
-                    <button class="button fill-button">Fill Cup</button>
-                    <button class="button add-milk">Add Milk</button>
+                    <button class="fill-button">Fill Cup</button>
+                    <button class="add-milk">Add Milk</button>
                 </div>
-                
             </div>
-        </div>
-    </section>
-</body>
+        </section>
+    </body>
 
 </html>
